--- a/app/src/main/res/xml/backup_rules.xml
+++ b/app/src/main/res/xml/backup_rules.xml
@@ -1,13 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-   Sample backup rules file; uncomment and customize as necessary.
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+   Backup configuration for GlobalTranslation app
    See https://developer.android.com/guide/topics/data/autobackup
-   for details.
    Note: This file is ignored for devices older than API 31
-   See https://developer.android.com/about/versions/12/backup-restore
 -->
 <full-backup-content>
+    <!-- Include user preferences (DataStore) -->
+    <include domain="sharedpref" path="app_preferences.preferences_pb"/>
+
+    <!-- Include Room database for conversation history -->
+    <include domain="database" path="conversation_database"/>
+
     <!--
-   <include domain="sharedpref" path="."/>
-   <exclude domain="sharedpref" path="device.xml"/>
--->
+         Note: By default, all other files are NOT backed up unless explicitly included.
+         ML Kit models are stored in app's internal storage and won't be backed up
+         unless we explicitly include the file domain, which we don't.
+    -->
 </full-backup-content>
