--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -1,19 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-   Sample data extraction rules file; uncomment and customize as necessary.
-   See https://developer.android.com/about/versions/12/backup-restore#xml-changes
-   for details.
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+   Data extraction rules for Android 12+ (API 31+)
+   See https://developer.android.com/about/versions/12/backup-restore
 -->
 <data-extraction-rules>
-    <cloud-backup>
-        <!-- TODO: Use <include> and <exclude> to control what is backed up.
-        <include .../>
-        <exclude .../>
+    <cloud-backup disableIfNoEncryptionCapabilities="true">
+        <!-- Include user preferences (DataStore) -->
+        <include domain="sharedpref" path="app_preferences.preferences_pb"/>
+
+        <!-- Include Room database for conversation history -->
+        <include domain="database" path="conversation_database"/>
+
+        <!--
+             Note: By only including specific paths, everything else is excluded by default.
+             ML Kit models and cache are not backed up because we don't include the file domain.
         -->
     </cloud-backup>
-    <!--
+
     <device-transfer>
-        <include .../>
-        <exclude .../>
+        <!-- Transfer user data during device-to-device transfer -->
+        <include domain="sharedpref" path="app_preferences.preferences_pb"/>
+        <include domain="database" path="conversation_database"/>
+
+        <!--
+             Note: Only specified includes are transferred.
+             ML Kit models are excluded by default since file domain is not included.
+        -->
     </device-transfer>
-    -->
 </data-extraction-rules>
